<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="2dp">


        <TextView
            android:id="@+id/tv_text_fen15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute15"
            android:textColor="@color/chart_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_text_hour1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour1"
            android:textColor="@color/chart_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_text_hour4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour4"
            android:textColor="@color/chart_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_text_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dayly_line"
            android:textColor="@color/chart_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@color/chart_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/k_depth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/depth"
            android:textColor="@color/chart_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/k_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/index"
            android:textColor="@color/chart_text"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:id="@+id/k_line"
        android:layout_width="48dp"
        android:layout_height="2dp"
        android:background="@drawable/circle_blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/chart_grid_line" />
</LinearLayout>