<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/index_buy_list"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/order_buy"
        android:textColor="@color/chart_text"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/number_buy_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/number"
        android:textColor="@color/chart_text"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/price_buy_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/price"
        android:textColor="@color/chart_text"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/price_sell_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="[USDT]"
        android:textColor="@color/chart_text"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/number_sell_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/number"
        android:textColor="@color/chart_text"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/index_sell_list"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/order_sell"
        android:textColor="@color/chart_text"
        android:textSize="11sp" />
</LinearLayout>
