<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/time_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/time_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/chart_dark"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_text_fen0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/btn_circle_deep"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/timesharing"
                android:textColor="@color/chart_text"
                android:textSize="12sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_text_fen1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/btn_circle_deep"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/minute1"
                android:textColor="@color/chart_text"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_text_fen5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/btn_circle_deep"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/minute5"
                android:textColor="@color/chart_text"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_text_fen30"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/btn_circle_deep"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/minute30"
                android:textColor="@color/chart_text"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_text_week"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/btn_circle_deep"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/weekly_line"
                android:textColor="@color/chart_text"
                android:textSize="12sp" />

        </FrameLayout>
    </LinearLayout>
</FrameLayout>