<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="88dp">

    <TextView
        android:id="@+id/k_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text=""
        android:textColor="@color/chart_green"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/approx"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/k_Price"
        android:gravity="bottom"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:text=""
        android:textAlignment="@+id/priceL"
        android:textColor="@color/chart_text" />

    <TextView
        android:id="@+id/apprise"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/k_Price"
        android:layout_toRightOf="@+id/approx"
        android:gravity="bottom"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:text=""
        android:textColor="@color/chart_green" />

    <LinearLayout
        android:id="@+id/amountL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_zuigao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/app_zuidi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/app_liang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/amountL"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_zuigao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour24_highest"
            android:textColor="@color/chart_text"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_zuidi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/hour24_lowest"
            android:textColor="@color/chart_text"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_liang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour24_amount"
            android:textColor="@color/chart_text"
            android:textSize="11sp" />
    </LinearLayout>

</RelativeLayout>